# noisebox

./: .gitignore  AUDIT.md  CONTRIBUTING.md  COPYRIGHT  README.md  SECURITY.md  THIRD_PARTY.md
.github/workflows/: firmware.yml
docs/: index.html
docs/firmware/: manifest.json
docs/flash/: index.html
firmware/: CMakeLists.txt  idf-shell.bat  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  base64.c  base64.h  config.h.example  crypto.c  crypto.h  display.cpp  display.h  font8x16.c  font8x16.h  hw_pins.h  idf_component.yml  keyboard.c  keyboard.h  main.c  pairing.c  pairing.h  ratchet.c  ratchet.h  sas.c  sas.h  session.c  session.h  storage.c  storage.h  transport.c  transport.h  ui.c  ui.h  wifi.c  wifi.h
relay/: .env.example  Caddyfile.example  Dockerfile  README.md  bot.py  cardputer-relay.service  docker-compose.yml  peer_ghost.py
